--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -20,6 +20,9 @@
 
       <%= link_to "back to cocktails list", cocktails_path %>
 
+      <%= cl_image_tag("siojtgw8dltekzzbnwg4",
+      width: 400, height: 300, crop: :fill) %>
+
     </div>
   </div>
 </div>
