--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,8 +1,20 @@
-<h1>Create new cocktail</h1>
-<%= simple_form_for @cocktail do |f| %>
-  <%= f.input :name %>
-  <%= f.input :photo %>
-  <%= f.input :photo_cache, as: :hidden %>
-  <%= f.button :submit %>
-<% end %>
-<%= link_to "Back to cocktails list", cocktails_path %>
+<div class="container">
+  <div class="row ">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+      <h1>Create new cocktail</h1>
+      <%= simple_form_for @cocktail do |f| %>
+        <%= f.input :name %>
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
+        <%= f.button :submit, class: "btn btn-primary" %>
+      <% end %>
+      <br>
+      <p>
+        <%= link_to "Back to cocktails list", cocktails_path  %>
+      </p>
+
+
+    </div>
+  </div>
+</div>
+
