--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+
+    <%= render "shared/navbar" %>
+rails
     <%= yield %>
+
+    <%= render "shared/footer" %>
   </body>
 </html>
